# chessmate

./: .clang-format  .clang-tidy  .gitignore  CMakePresets.json  README.md  combine_files.py  combined_source_code.txt  main.cpp  test_websocket_client.py
.github/workflows/: ci.yml
game/: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
game/include/application/: game_controller.hpp
game/include/domain/: board.hpp  enums.hpp  game.hpp  gamestate.hpp  move.hpp  piece.hpp  player.hpp
game/include/domain/pieces/: bishop.hpp  king.hpp  knight.hpp  movable_piece.hpp  pawn.hpp  queen.hpp  rook.hpp
game/include/gui/: board_view.hpp  gui.hpp  texture_manager.hpp
game/include/gui/widgets/: Button.hpp  sprite_piece.hpp
game/include/infrastructure/: config.hpp
game/include/infrastructure/ai/: ai_evaluator.hpp
game/include/infrastructure/network/: protocol.hpp  websocket_client.hpp
game/include/infrastructure/players/: ai_player.hpp  human_player.hpp  network_player.hpp
game/include/utils/: utils.hpp
game/src/: main.cpp
game/src/application/: game_controller.cpp
game/src/domain/: board.cpp  game.cpp
game/src/domain/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
game/src/gui/: board_view.cpp  gui.cpp  texture_manager.cpp
game/src/gui/widgets/: Button.cpp  sprite_piece.cpp
game/src/infrastructure/: config.cpp
game/src/infrastructure/ai/: ai_evaluator.cpp
game/src/infrastructure/network/: websocket_client.cpp
game/src/infrastructure/players/: ai_player.cpp  human_player.cpp  network_player.cpp
game/src/utils/: utils.cpp
game/tests/: CMakeLists.txt  movegen_test.cpp  perft_test.cpp  test_application.cpp  test_board.cpp  test_domain.cpp  test_perft.cpp  test_pieces.cpp
server/: Dockerfile  pom.xml
server/src/main/java/com/devign/chessmate/: ChessmateServerApplication.java
server/src/main/java/com/devign/chessmate/config/: WebSocketConfig.java
server/src/main/java/com/devign/chessmate/service/: MatchmakingService.java
server/src/main/java/com/devign/chessmate/socket/: GameSocketHandler.java
server/src/main/resources/: application.properties
server/src/test/java/com/devign/chessmate/: ChessmateServerApplicationTests.java  MatchmakingServiceTest.java
